--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "author": "Carlos Eduardo Marques Pereira",
   "devDependencies": {
+    "eslint": "^8.42.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "mongoose": "^6.2.6"
   }
